force-app/main/default/objects/SalesOrder__c/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <label>Released</label>
    <type>DateTime</type>
</CustomField>