force-app/main/default/objects/SalesOrder__c/fields/Request_Free_Financing__c.field-meta.xml
<CustomField>
    <fullName>Request_Free_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Free Financing</label>
    <type>Checkbox</type>
</CustomField>