force-app/main/default/objects/SalesOrder__c/fields/ResaleCertificate__c.field-meta.xml
<CustomField>
    <fullName>ResaleCertificate__c</fullName>
    <label>Resale Certificate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>