force-app/main/default/objects/SalesOrder__c/fields/ResaleCertificateExpires__c.field-meta.xml
<CustomField>
    <fullName>ResaleCertificateExpires__c</fullName>
    <label>Resale Certificate Expires</label>
    <type>Date</type>
</CustomField>