force-app/main/default/objects/SalesOrder__c/fields/Sales_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Close_Date__c</fullName>
    <formula>Market__r.Sales_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Close Date</label>
    <type>Date</type>
</CustomField>