force-app/main/default/objects/SalesOrder__c/fields/Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Date__c</fullName>
    <formula>Market__r.Sales_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>