force-app/main/default/objects/SalesOrder__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Generated By</label>
    <type>Text</type>
</CustomField>