force-app/main/default/objects/SalesOrder__c/fields/SalesQuote__c.field-meta.xml
<CustomField>
    <fullName>SalesQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Number</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>