force-app/main/default/objects/SalesOrder__c/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>