force-app/main/default/objects/SalesOrder__c/fields/SalesTerritory__c.field-meta.xml
<CustomField>
    <fullName>SalesTerritory__c</fullName>
    <label>Sales Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>