force-app/main/default/objects/SalesOrder__c/fields/Sample_ELM_Copy__c.field-meta.xml
<CustomField>
    <fullName>Sample_ELM_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample ELM Copy</label>
    <type>Checkbox</type>
</CustomField>