force-app/main/default/objects/SalesOrder__c/fields/Second_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Notice_Date__c</fullName>
    <label>Second Notice Date</label>
    <type>Date</type>
</CustomField>