force-app/main/default/objects/SalesOrder__c/fields/Send_Invoice_to_Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_to_Alternate_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will send invoice and payments to alternate contact</inlineHelpText>
    <label>Send Invoice to Alternate Contact</label>
    <type>Checkbox</type>
</CustomField>