force-app/main/default/objects/SalesOrder__c/fields/ServiceDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceDiscountAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>