force-app/main/default/objects/SalesOrder__c/fields/ServiceTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalAmount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>