force-app/main/default/objects/SalesOrder__c/fields/ServiceVATAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceVATAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service VAT/GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>