force-app/main/default/objects/SalesOrder__c/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <formula>ContactShipping__r.ACDF_FName__c &amp; &quot; &quot; &amp; ContactShipping__r.ACDF_LName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Contact</label>
    <type>Text</type>
</CustomField>