force-app/main/default/objects/SalesOrder__c/fields/Shipping_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Phone__c</fullName>
    <formula>ContactShipping__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Phone</label>
    <type>Text</type>
</CustomField>