force-app/main/default/objects/SalesOrder__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>