force-app/main/default/objects/SalesOrder__c/fields/ShipToCity__c.field-meta.xml
<CustomField>
    <fullName>ShipToCity__c</fullName>
    <label>Ship To City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>