force-app/main/default/objects/SalesOrder__c/fields/ShipToCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipToCountry__c</fullName>
    <label>Ship To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>