force-app/main/default/objects/SalesOrder__c/fields/ShipToStateProvince__c.field-meta.xml
<CustomField>
    <fullName>ShipToStateProvince__c</fullName>
    <label>Ship To State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>