force-app/main/default/objects/SalesOrder__c/fields/Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Space_Reservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Space Reservation</label>
    <type>Checkbox</type>
</CustomField>