force-app/main/default/objects/SalesOrder__c/fields/SpecificTextandTerms__c.field-meta.xml
<CustomField>
    <fullName>SpecificTextandTerms__c</fullName>
    <label>Specific Terms &amp; Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>