force-app/main/default/objects/SalesOrder__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&quot;Post&quot;</defaultValue>
    <label>IntacctState</label>
    <length>5</length>
    <type>Text</type>
</CustomField>