force-app/main/default/objects/SalesOrder__c/fields/Status_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Status_Picklist__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Unreleased</fullName>
            </value>
            <value>
                <fullName>Pending Renewal</fullName>
            </value>
            <value>
                <fullName>Payment Update Needed</fullName>
            </value>
            <value>
                <fullName>Subscription Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>