force-app/main/default/objects/SalesOrder__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Subscription</description>
    <inlineHelpText>Related Subscription</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Boom Orders</relationshipLabel>
    <relationshipName>Boom_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>