force-app/main/default/objects/SalesOrder__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <label>Subscription Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>