force-app/main/default/objects/SalesOrder__c/fields/SubtotalAmount__c.field-meta.xml
<CustomField>
    <fullName>SubtotalAmount__c</fullName>
    <formula>99999</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>