force-app/main/default/objects/SalesOrder__c/fields/Team_Order_Processed__c.field-meta.xml
<CustomField>
    <fullName>Team_Order_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Entry criteria for team order approval process, should be automatically checked when a team order is approved by Shelly or Alyssa</description>
    <label>Team Order Processed</label>
    <type>Checkbox</type>
</CustomField>