force-app/main/default/objects/SalesOrder__c/fields/Tool_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Tool_Discounts__c</fullName>
    <label>Tool Discounts</label>
    <summarizedField>SalesOrderProductLine__c.Actual_Discount__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderProductLine__c.Product_Type__c</field>
        <operation>contains</operation>
        <value>Marketing Tool</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>