force-app/main/default/objects/SalesOrder__c/fields/Tools_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tools_Percent__c</fullName>
    <formula>IF( Tools_Total__c &lt;&gt; 0, IF(   Tool_Discounts__c   &lt;&gt; 0,Tool_Discounts__c / Tools_Total__c ,0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tools %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>