force-app/main/default/objects/SalesOrder__c/fields/Total_Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Discount__c</fullName>
    <label>Total Line Discount</label>
    <summarizedField>SalesOrderProductLine__c.LineDiscountAmount__c</summarizedField>
    <summaryForeignKey>SalesOrderProductLine__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>