force-app/main/default/objects/SalesOrder__c/fields/Total_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Total_Recipients__c</fullName>
    <label>Total Recipients</label>
    <summaryForeignKey>Order_Line_Recipient__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>