force-app/main/default/objects/SalesOrder__c/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <formula>round( Total_Line_Discount__c  + ( ProductAmount__c *  DiscountPercent__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>