force-app/main/default/objects/SalesOrder__c/fields/TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxAmount__c</fullName>
    <formula>round(AdditionalChargeCreditTaxAmount__c + Product_Tax_Amount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>