force-app/main/default/objects/SalesOrder__c/fields/TotalVATAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalVATAmount__c</fullName>
    <formula>round(AdditionalChargeCreditVATAmount__c + ServiceVATAmount__c + ProductVATAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VAT/GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>