force-app/main/default/objects/SalesOrder__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <defaultValue>&quot;Web Order&quot;</defaultValue>
    <label>TransactionType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>