force-app/main/default/objects/SalesOrder__c/fields/UpdateAdditionalAccountInfoContacts__c.field-meta.xml
<CustomField>
    <fullName>UpdateAdditionalAccountInfoContacts__c</fullName>
    <description>Update Additional Account Info corresponding field on Order Release. Default value is set in Kugamon Settings.</description>
    <inlineHelpText>Update Additional Account Info corresponding field on Order Release</inlineHelpText>
    <label>Update Additional Account Info Contacts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Place Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>