force-app/main/default/objects/SalesOrder__c/fields/Updated_Finance_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Updated_Finance_Discounts__c</fullName>
    <label>Updated Finance Discounts</label>
    <summarizedField>SalesOrderAdditionalChargeCredit__c.SalesPrice__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderAdditionalChargeCredit__c.Quantity__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SalesOrderAdditionalChargeCredit__c.Id</field>
        <operation>equals</operation>
        <value>a0vd0000007weTL</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderAdditionalChargeCredit__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>