force-app/main/default/objects/SalesOrder__c/fields/Use_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Billing Address</label>
    <type>Checkbox</type>
</CustomField>