force-app/main/default/objects/SalesOrder__c/fields/Use_Last_Year_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Use_Last_Year_s_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Last Year&apos;s Profile</label>
    <type>Checkbox</type>
</CustomField>