force-app/main/default/objects/SalesOrder__c/fields/VATRegistration__c.field-meta.xml
<CustomField>
    <fullName>VATRegistration__c</fullName>
    <label>VAT Registration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>