force-app/main/default/objects/SalesOrder__c/fields/WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>WarehouseID__c</fullName>
    <defaultValue>&quot;EAGN&quot;</defaultValue>
    <label>WarehouseID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>