force-app/main/default/objects/SalesOrder__c/fields/Wave_Finance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wave_Finance_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wave Finance Fee</label>
    <type>Checkbox</type>
</CustomField>