force-app/main/default/objects/SalesOrder__c/fields/Web_Listings_Live__c.field-meta.xml
<CustomField>
    <fullName>Web_Listings_Live__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Listings Live</label>
    <type>Date</type>
</CustomField>