force-app/main/default/objects/SalesOrder__c/fields/WebOrder__c.field-meta.xml
<CustomField>
    <fullName>WebOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Order</label>
    <type>Checkbox</type>
</CustomField>