force-app/main/default/objects/SalesOrder__c/fields/WebReferenceOrder__c.field-meta.xml
<CustomField>
    <fullName>WebReferenceOrder__c</fullName>
    <label>Web Reference Order</label>
    <length>80</length>
    <type>Text</type>
</CustomField>