force-app/main/default/objects/SalesOrder__c/validationRules/Inscriptions_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Inscriptions_Missing</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Inscription_Line_1_Missing__c = TRUE, Inscription_Line_2_Missing__c = TRUE, Inscription_Line_3_Missing__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Inscription_Line_1_Missing__c</errorDisplayField>
    <errorMessage>Please supply Inscriptions</errorMessage>
</ValidationRule>