force-app/main/default/objects/SalesOrder__c/validationRules/Other_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Field</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Cancellation_reason__c , &quot;9. Other&quot;), ISBLANK( Other__c ) , NULL)</errorConditionFormula>
    <errorMessage>Other field cannot be blank if “Cancellation reason” is “Other”</errorMessage>
</ValidationRule>