force-app/main/default/objects/SalesOrder__c/listViews/All_Specific.listView-meta.xml
<ListView>
    <fullName>All_Specific</fullName>
    <columns>NAME</columns>
    <columns>ContactBuying__c</columns>
    <columns>Account__c</columns>
    <columns>OrderName__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Status__c</columns>
    <columns>ProductAmount__c</columns>
    <columns>AdditionalChargeCreditAmount__c</columns>
    <columns>TotalTaxAmount__c</columns>
    <columns>NetAmount__c</columns>
    <columns>CompletedPayments__c</columns>
    <columns>BalanceDueAmount__c</columns>
    <columns>ScheduledPayments__c</columns>
    <columns>Net_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Luttner</value>
    </filters>
    <filters>
        <field>OrderDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <label>Specific Search by Account</label>
    <language>en_US</language>
</ListView>