force-app/main/default/objects/SalesOrder__c/listViews/Approved_Orders_w_Pmt.listView-meta.xml
<ListView>
    <fullName>Approved_Orders_w_Pmt</fullName>
    <columns>NAME</columns>
    <columns>OrderName__c</columns>
    <columns>Account__c</columns>
    <columns>ContactBuying__c</columns>
    <columns>OrderDate__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Released__c</columns>
    <columns>FulfillOrder__c</columns>
    <columns>NetAmount__c</columns>
    <columns>AppliedPaymentAmount__c</columns>
    <columns>Status_Picklist__c</columns>
    <columns>PaymentStatus2__c</columns>
    <columns>Payments_Made__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OnlinePaymentExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Picklist__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>CompletedPayments__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Approved Orders w Pmt</label>
</ListView>