force-app/main/default/objects/SalesOrder__c/listViews/Draft_Orders.listView-meta.xml
<ListView>
    <fullName>Draft_Orders</fullName>
    <columns>NAME</columns>
    <columns>ContactBuying__c</columns>
    <columns>Account__c</columns>
    <columns>OrderName__c</columns>
    <columns>Status__c</columns>
    <columns>ProductAmount__c</columns>
    <columns>AdditionalChargeCreditAmount__c</columns>
    <columns>TotalTaxAmount__c</columns>
    <columns>NetAmount__c</columns>
    <columns>CompletedPayments__c</columns>
    <columns>BalanceDueAmount__c</columns>
    <columns>ScheduledPayments__c</columns>
    <columns>Net_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Picklist__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Orders</label>
</ListView>